@@ -174,6 +174,8 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
   user rights
 * (bug 137) Commented out translations for copyrightwarning which mention GNU FDL
 * (bug 5723) Don't count pages linked to from the MediaWiki namespace as "wanted"
+* (bug 5696) Add a third parameter, $3, to "rcnote", passing the current time
+  formatted according to the current user's settings
 
 == Compatibility ==
 
